<resources>
    <string name="pause_video">Pause video</string>
    <string name="play_video">Play video</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="app_name">Camera</string>
    <string name="warning_fast_motion">Device moving too fast</string>
    <string name="warning_low_light_motion">"Low light
Move device slowly"</string>
    <string name="warning_viewport">Keep subject centered</string>
    <string name="had_warning_fast_motion">Device moved too fast</string>
    <string name="had_warning_low_light">Low light</string>
    <string name="had_warning_viewport">Capture error</string>
    <string name="capture_error">Capture error</string>
    <string name="error_fast_motion">Device moved too fast</string>
    <string name="error_slow_motion">"Device moved too slowly
 or scene too far away"</string>
    <string name="error_tracking_failed">"Can't capture this shot"</string>
    <string name="error_scene">"Can't isolate subject or subject moved"</string>
    <string name="error_viewport">Framing changed too much</string>
    <string name="compute_notification">Processing image…</string>
    <string name="compute_error">Processing error</string>
    <string name="render_notification">Rendering image…</string>
    <string name="refocus_instructions">"Slowly raise your device.
Keep subject centered."</string>
    <string name="capture_summary">Capture summary</string>
    <string name="refocus_tutorial_next">NEXT</string>
    <string name="refocus_tutorial_ok_got_it">OK, GOT IT</string>
    <string name="refocus_tutorial_title_slide_1">Shoot with Lens Blur to help the subject stand out.</string>
    <string name="refocus_tutorial_title_slide_2">"Lens Blur is best for close-ups like people, food and nature.
Shoot within 5 feet."</string>
    <string name="refocus_tutorial_title_slide_3">"Slowly raise your device.
Keep subject centered."</string>
    <string name="refocus_editor_button_text_done">Done</string>
    <string name="refocus_slider_cling_text">To adjust blur, drag slider</string>
    <string name="label_options">Settings</string>
    <string name="label_test_stitch">Stitch Panorama</string>
    <string name="stitching_notification">Stitching panorama.</string>
    <string name="too_fast">Too fast</string>
    <string name="hit_target_to_start">To start, keep dot inside circle</string>
    <string name="tap_to_start">To start, touch the icon below</string>
    <string name="ok">OK, Got it</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="stitch_unstitched_sessions">Stitch all unstitched sessions</string>
    <string name="general_settings">General settings</string>
    <string name="dogfood_settings">Dogfood settings</string>
    <string name="use_fast_shutter">Use fast shutter</string>
    <string name="use_fast_shutter_description">Use high speed shutter mode.</string>
    <string name="use_realtime_alignment">Use Realtime Alignment</string>
    <string name="use_realtime_alignment_description">Align the images while capturing them (Highly experimental).</string>
    <string name="enable_location_provider">Store location</string>
    <string name="enable_location_provider_description">Whether to determine and store the location in the panorama files.</string>
    <string name="panorama_cancel_button_text">"  Cancel  "</string>
    <string name="photosphere_wallpaper_description">Displays photo spheres as a Live Wallpaper.</string>
    <string name="select_featured_photosphere">Featured Photo Spheres</string>
    <string name="select_featured_photosphere_description">Select one of our featured Photo Spheres.</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="select_photosphere_description">Select a Photo Sphere to display in the live wallpaper.</string>
    <string name="enable_compass_mode">Enable compass mode</string>
    <string name="enable_compass_mode_description">If enabled, the Photo Sphere orients itself according to the current rotation of the device.</string>
    <string name="pref_photosphere_settings_category">Panorama settings</string>
    <string name="pref_photosphere_picturesize_title">Picture size</string>
    <string name="pref_photosphere_picturesize_entry_16mp">16M pixels</string>
    <string name="pref_photosphere_picturesize_entry_12mp">12M pixels</string>
    <string name="pref_photosphere_picturesize_entry_8mp">8M pixels</string>
    <string name="pref_photosphere_picturesize_default">8mp</string>
    <string name="photosphere_calibration_step_one">"Calibrate your camera for Photo Sphere.

1. Align dot with circle"</string>
    <string name="photosphere_calibration_step_two">2. Rotate up or down to align next dot</string>
    <string name="photosphere_calibration_step_three">3. Rotate to align last dot</string>
    <string name="photosphere_calibration_finished">All finished. Press the capture button and have fun!</string>
    <string name="photosphere_no_back_camera">Sorry, your device does not have a back facing camera</string>
    <string name="processing_photo_sphere">Processing photo sphere …</string>
    <string name="processing_panorama">Processing panorama …</string>
    <string name="cancel_panorama">Discard panorama</string>
    <string name="cancel_photo_sphere">Discard photo sphere</string>
    <string name="photosphere_tutorial_next">NEXT</string>
    <string name="photosphere_tutorial_ok_got_it">OK, GOT IT</string>
    <string name="photosphere_fisheye_confirm_dialog">Your fisheye is not complete, process anyway?</string>
    <string name="photosphere_dialog_process">Process</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_gridlines_title">Show grid in viewfinder</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="btn_zoom_plus">Z+</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="mode_camera">Camera</string>
    <string name="mode_video">Video</string>
    <string name="manual_exposure_compensation_desc">Manual Exposure Compensation</string>
    <string name="exposure_compensation_desc_n2">Exposure Compensation -2</string>
    <string name="exposure_compensation_desc_n1">Exposure Compensation -1</string>
    <string name="exposure_compensation_desc_0">Exposure Compensation 0</string>
    <string name="exposure_compensation_desc_p1">Exposure Compensation +1</string>
    <string name="exposure_compensation_desc_p2">Exposure Compensation +2</string>
    <string name="setting_back_camera_photo">Back camera photo</string>
    <string name="setting_back_camera_video">Back camera video</string>
    <string name="setting_front_camera_photo">Front camera photo</string>
    <string name="setting_front_camera_video">Front camera video</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="pref_category_resolution_quality">Resolution &amp; quality</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_camera_exposure_compensation">Manual exposure</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="pref_burst_settings">Burst settings</string>
    <string name="pref_experimental">Experimental</string>
    <string name="pref_gcam_hdr_raw_title">HDR+ RAW+JPEG</string>
    <string name="pref_gcam_hdr_raw_summary">Save raw DNG files when taking HDR+ images in addition to the standard JPG</string>
    <string name="pref_burst_title">SmartBurst</string>
    <string name="pref_smartburst_summary">Only saves the best parts of a burst capture</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto-generate creations</string>
    <string name="pref_video_stabilization">Enable video stabilization</string>
    <string name="filmstrip_no_photos_description">You have no photos</string>
</resources>