<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.widget.ModeOptions android:layout_gravity="end|center|top" android:id="@id/mode_options" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/mode_options_height" android:layout_marginTop="@dimen/mode_options_margin_right_and_top" android:layout_marginRight="@dimen/mode_options_margin_right_and_top"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ns1="http://schemas.android.com/apk/res/com.android.camera2">
    <com.android.camera.ui.RadioOptions android:gravity="end|center" android:orientation="horizontal" android:id="@id/mode_options_exposure" android:background="@null" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" ns1:selected_drawable="@drawable/mode_option_background">
        <ImageButton android:id="@id/exposure_n2" android:tag="-2" android:background="@null" android:src="@drawable/ic_exposure_n2" android:contentDescription="@string/exposure_compensation_desc_n2" style="@style/ModeOption" />
        <ImageButton android:id="@id/exposure_n1" android:tag="-1" android:background="@null" android:src="@drawable/ic_exposure_n1" android:contentDescription="@string/exposure_compensation_desc_n1" style="@style/ModeOption" />
        <ImageButton android:id="@id/exposure_0" android:tag="0" android:background="@null" android:src="@drawable/ic_exposure_0" android:contentDescription="@string/exposure_compensation_desc_0" style="@style/ModeOption" />
        <ImageButton android:id="@id/exposure_p1" android:tag="1" android:background="@null" android:src="@drawable/ic_exposure_p1" android:contentDescription="@string/exposure_compensation_desc_p1" style="@style/ModeOption" />
        <ImageButton android:id="@id/exposure_p2" android:tag="2" android:background="@null" android:src="@drawable/ic_exposure_p2" android:contentDescription="@string/exposure_compensation_desc_p2" style="@style/ModeOption" />
    </com.android.camera.ui.RadioOptions>
    <com.android.camera.ui.RadioOptions android:gravity="end|center" android:orientation="horizontal" android:id="@id/mode_options_pano" android:background="@null" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:id="@id/mode_options_buttons" android:background="@null" android:visibility="visible" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.android.camera.widget.RestorableImageButton android:id="@id/exposure_button" android:visibility="gone" android:src="@drawable/ic_exposure" android:contentDescription="@string/manual_exposure_compensation_desc" style="@style/ModeOption" />
        <com.android.camera.widget.MultiToggleImageButton android:id="@id/countdown_toggle_button" android:visibility="gone" ns1:imageIds="@array/countdown_duration_icons" ns1:contentDescriptionIds="@array/countdown_duration_descriptions" style="@style/ModeOption" />
        <com.android.camera.widget.MultiToggleImageButton android:id="@id/hdr_plus_toggle_button" android:visibility="gone" ns1:imageIds="@array/pref_camera_hdr_plus_icons" ns1:contentDescriptionIds="@array/hdr_plus_descriptions" style="@style/ModeOption" />
        <com.android.camera.widget.MultiToggleImageButton android:id="@id/flash_toggle_button" android:visibility="gone" ns1:imageIds="@array/camera_flashmode_icons" ns1:contentDescriptionIds="@array/camera_flash_descriptions" style="@style/ModeOption" />
    </LinearLayout>
</com.android.camera.widget.ModeOptions>